Renamed swagger tags to authorization scopes Facilitated identity tokens for installer
