# src/controllers/charging-controller.ts
@@ -1,22 +1,16 @@
 import { Controller, Security, Route, Tags, Get } from 'tsoa';
 
-import { CardRegistration } from '../types';
-import cpService from '../services/cp';
-
 @Route('charging')
 export class ChargingController extends Controller {
   /** jwt scopes: `operator` ` */
   @Get('/start')
   @Security('jwtAuth')
-  @Tags('Charge point')
-  public  startCharging(): void {
-    
-  }
+  @Tags('operator')
+  public startCharging(): void {}
+
   /** jwt scopes: `operator`  */
   @Get('/stop')
   @Security('jwtAuth')
-  @Tags('Charge point')
-  public  stopCharging(): void {
-    
-  }
+  @Tags('operator')
+  public stopCharging(): void {}
 }
